Revision history for Perl module Net::ACME2

0.21
- Acknowledge need for XS-based SSL functionality. This module can’t run
  “anywhere that Perl runs” because of this. :-(
- Make tests flex ECDSA keys as well as RSA.

0.2 19 Jun 2018
- BREAKING: poll_authorization() and poll_order() now return the object’s
new status rather than boolean and no longer throw an exception on an
unrecognized status.
- finalize_order() now returns the object’s new status.
- “http_01” challenges now have get_path() and get_content() methods.
- “dns_01” challenges now have get_record_name() and get_record_value() methods.
- Experimental support for the “tls-alpn-01” ACME challenge.
- Most exceptions are now converted to Net::ACME::X::Generic or subclasses
thereof. The remaining plain-string exceptions “really should not happen”.
- Some unused logic (e.g., compact JWS serialization) is pruned away.
- We no longer send undef/null values to newAccount.
- Example scripts are a bit more refined.
- More substantive tests are added.
- Fix versioning issue with PAUSE. (Thanks to Dan Book for mentioning it.)
- I now consider this to be a “beta” release.

0.12 11 Jun 2018
- Remove Types::Serialiser (thanks, Chris Novakovic!)

0.11 1 Jun 2018
- Add Types::Serialiser to Makefile.PL (thanks, Chris Novakovic!)

0.10 2 Apr 2018
- Add “Content-Type” header to outgoing POSTs.

0.09 14 Mar 2018
- Fix MANIFEST (sorry!)
- Update documentation a bit for the production endpoint.

0.08 13 Mar 2018
- Make the Let’s Encrypt module default to the production server.
- DNS challenges are now instantiated as dns_01.pm instances.
- Tweaks to documentation.

0.07 11 Feb 2018
- Fix to request new nonce when there is none set.

0.06 9 Feb 2018
- Remove unused “Pending” modules (holdovers from Net::ACME)

0.05 18 Jan 2018
- Minimum X::Tiny version of 0.12.

0.04 18 Jan 2018
- Fix flaw in example logic.

0.03 15 Jan 2018
- Verbiage tweak in POD, search visibility

0.02 14 Jan 2018
- Fix examples to show generated key.