@@ -1,9 +1,10 @@
 Revision history for Perl module Net::ACME2
 
 0.21
-- Acknowledge need for XS-based SSL functionality. This module can’t run
+- Acknowledge need for XS-based TLS functionality. This module can’t run
   “anywhere that Perl runs” because of this. :-(
-- Make tests flex ECDSA keys as well as RSA.
+- Make tests flex ECDSA keys as strenuously as they flex RSA keys.
+- Add aviso about speed to the main POD.
 
 0.2 19 Jun 2018
 - BREAKING: poll_authorization() and poll_order() now return the object’s
